# filehash-indexer

./: Cargo.toml  README.md
src/: main.rs  test.rs
