[package]
name = "hash-indexer"
authors = ["Pream Pinbut"]
license = "MIT OR Apache-2.0"
version = "1.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.8" }
colored = "2.0.0"
data-encoding = "2.3.3"
regex = "1.7.1"
ring = "0.16.20"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
